--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <ul style="height: 30%;">
           <li><a href="">HOME</a></li>
           <li><a href="Chart.html">CHART</a></li>
-          <li class="menu" id="menu">LEARN MORE</li>
+          <li class="menu" id="menu">Blogs</li>
       </ul>
   </nav>
 
